--- a/src/components/sections/RegistrationSection/styles.scss
+++ b/src/components/sections/RegistrationSection/styles.scss
@@ -1,11 +1,11 @@
 @supports (height: 100dvh) {
     .registration-section {
-        height: 100dvh;
+        min-height: 100dvh;
     }
 }
 
 .registration-section {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
