feat: -The list of posts has been moved to a separate component, a pagination component has been added;

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,3 +10,4 @@
 @import 'plugins/swiper.scss';
 @import 'plugins/swiper-grid.scss';
 @import 'plugins/toast.scss';
+@import 'plugins/vue-multiselect.scss';
